rgw: fix versioned object IO error

When accessing a copied destination object, its source object's instance ID
    information is needed, however it's missing now in the destination object's
    manifest.

    In order to fix this problem, we can record source object's version_id/instance
    into dest object's manifest(a new filed 'tail_instance' is added). When creating
    a new object(not copy), 'tail_instance' should be equal to its instance value.
    When copy/get a object, 'tail_instance' should always be used to get the right
    tail objects.

    Fixes: http://tracker.ceph.com/issues/17111
    Signed-off-by: Yang Honggang <joseph.yang@xtaotech.com>

(cherry picked from commit d43b69e529328f73da6c29cd746557788a989ae0)